--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,17 +14,18 @@
         $(document).ready(function() {
             $.ajax({
                 url: "http://localhost:8080/api/trades"
-            }).then(function(data) {
-               if (data != undefined) {
-                   data.forEach(function (item, index) {
-                       $('#myTable > tbody:last-child')
-                                .append('<tr>')
-                                    .append('<td>' + item.id + '</td>')
-                                    .append('<td>' + item.orderSellId + '</td>')
-                                    .append('<td>' + item.orderBuyId + '</td>')
-                                    .append('<td>' + item.price + '</td>')
-                                    .append('<td>' + item.quantity + '</td>')
-                                .append('</tr>');
+            }).then(function(trades) {
+               if (trades != undefined) {
+                   trades.forEach(function (trade, index) {
+                       $('#trades > tbody:last-child')
+                                .append('<tr>'
+                                        + '<td>' + (index + 1) + '</td>'
+                                        + '<td>' + trade.id + '</td>'
+                                        + '<td>' + trade.orderSellId + '</td>'
+                                        + '<td>' + trade.orderBuyId + '</td>'
+                                        + '<td>' + trade.price + '</td>'
+                                        + '<td>' + trade.quantity + '</td>'
+                                        + '</tr>');
                    });
                }
             });
@@ -35,9 +36,10 @@
 <body>
 <div class="container my-5">
     <h2>Trades</h2>
-    <table id="myTable" class="table table-striped table-responsive-md">
+    <table id="trades" class="table table-striped table-responsive-md">
         <thead>
         <tr>
+            <th>Trade No.</th>
             <th>ID</th>
             <th>Order Sell ID</th>
             <th>Order Buy ID</th>
