--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -47,7 +47,7 @@
             <th>Quantity</th>
         </tr>
         </thead>
-        <tbody/>
+        <tbody></tbody>
     </table>
 </div>
 </body>
